# aoc

./: .gitignore  aoc.sln
aoc/: .gitignore  Program.cs  aoc.csproj
aoc/2015/: Day1.cs  Day2.cs
aoc/2022/: Day1.cs
aoc/2023/: Day1.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs
aoc/Lib/: Common.cs  Grid2D.cs  Solution.cs
python/2023/: day5.py
rust/: Cargo.toml  README.md  info.md
rust/data/: timings.json
rust/data/puzzles/: 01.md  02.md  03.md  05.md
rust/src/: lib.rs  main.rs  template.txt
rust/src/template/: aoc_cli.rs  day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
rust/src/template/commands/: solve.rs
rust/src/utils/: matrix.rs
